# kforge

./: .gitignore  AGENTS.md  DEV-ADD-PROVIDER.md  PROJECT-SNAPSHOT.md  PROJECT_SNAPSHOT.md  PROVIDERS_COLOR_LABELS.md  README.md  custom_provider.md  package.json  packaging-readiness.md  pnpm-lock.yaml  project-map.md  tailwind.config.js
docs/: BACKUP.md  MODELS_COLOR_LABELS.md  PRESETS_INVENTORY.md  PREVIEW_RUNNER.md  PROVIDERS_AND_MODELS.md  PROVIDERS_COLOR_LABELS.md  api-keys-and-billing.md  behavior-templates.md  custom_provider.md  index.md  ollama_cloud.md  portability.md  presets.json  project-memory.md  remote_presets_plan.md  terminology.md  user-guide.md  windows-setup.md  workspace-awareness.md
docs-internal/: PORTABILITY-NOTES.md  PROJECT-SNAPSHOT.md  ai-behavior-regression-suite.md  architecture-backlog.md  model-update-request.md  project-map.md  user-guide-notes.md
scripts/: backup.ps1  restore_github.ps1  restore_zip.ps1
src/: App.css  App.js  App.snapshot.before-ai-panel-modularize.js  App.test.js  setupTests.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_runner.rs  lib.rs  main.rs  preview.rs  scaffold.rs  service.rs
src-tauri/src/ai/: commands.rs  error.rs  mod.rs  secret_store.rs  types.rs
src-tauri/src/ai/providers/: mock.rs  mod.rs
src-tauri/src/ai/providers/claude/: mod.rs
src-tauri/src/ai/providers/custom/: mod.rs
src-tauri/src/ai/providers/deepseek/: mod.rs
src-tauri/src/ai/providers/gemini/: mod.rs
src-tauri/src/ai/providers/groq/: mod.rs
src-tauri/src/ai/providers/mistral/: mod.rs
src-tauri/src/ai/providers/ollama/: mod.rs
src-tauri/src/ai/providers/openai/: mod.rs  types.rs
src-tauri/src/ai/providers/openai_compat/: client.rs  config.rs  error.rs  mod.rs
src-tauri/src/ai/providers/openrouter/: mod.rs
src/ai/: appBuildProviderRecovery.test.js  appBuildStartContract.test.js  client.js  modelPresets.js  modelPresets.test.js  modelRegistry.js  modelRegistry.test.js  modelSelectionIntegration.test.js  modelWorkflowPolicy.js  remotePresets.js  (+10 more)
(+81 files in other folders)
