[package]
name = "kforge"
version = "0.1.0"
description = "KForge"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Secure credential storage (OS keyring)
keyring = "3"

# Error handling
thiserror = "2"

# Tauri v2 plugins
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
# this is used for production builds or when a dev server is not specified, DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]
